Solved checkstyle issues